--- a/App/FFXIVPostParse.csproj
+++ b/App/FFXIVPostParse.csproj
@@ -35,6 +35,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,8 +45,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form\PluginFormControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Form\PluginFormControl.Designer.cs">
+      <DependentUpon>PluginFormControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form\PluginForm.cs" />
     <Compile Include="PluginLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Form\PluginFormControl.resx">
+      <DependentUpon>PluginFormControl.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
