--- a/App/FFXIVPostParse.csproj
+++ b/App/FFXIVPostParse.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,21 +46,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form\PluginFormControl.cs">
+    <Compile Include="Control\PluginControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Form\PluginFormControl.Designer.cs">
-      <DependentUpon>PluginFormControl.cs</DependentUpon>
+    <Compile Include="Control\PluginControl.Designer.cs">
+      <DependentUpon>PluginControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form\PluginForm.cs" />
+    <Compile Include="Enum\AttributeEnum.cs" />
+    <Compile Include="Model\Log.cs" />
+    <Compile Include="Model\Player.cs" />
+    <Compile Include="PluginMain.cs" />
     <Compile Include="PluginLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\PluginUtil.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form\PluginFormControl.resx">
-      <DependentUpon>PluginFormControl.cs</DependentUpon>
+    <EmbeddedResource Include="Control\PluginControl.resx">
+      <DependentUpon>PluginControl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
