Replace the direct calls to PluginHttpClient. Now we use the DiscordService

--- a/App/MognetPlugin.csproj
+++ b/App/MognetPlugin.csproj
@@ -66,6 +66,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>PluginSettings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Service\DiscordService.cs" />
     <Compile Include="Util\PluginUtil.cs" />
   </ItemGroup>
   <ItemGroup>
